[package]
name = "rsbackup"
version = "0.1.0"
authors = ["Arc676/Alessandro Vinciguerra <alesvinciguerra@gmail.com>"]
edition = "2018"

[dependencies]
imgui = "0.7.0"
gfx = "0.18.2"
gfx_device_gl = "0.16"
glutin = "0.26"
image = "0.23"
old_school_gfx_glutin_ext = "0.26"
imgui-gfx-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
structopt = "0.3.21"
chrono = "0.4"

[[bin]]
name = "rsbackup"
path = "src/main.rs"

[[bin]]
name = "rsbackup-editor"
path = "editor/main.rs"

[features]
opengl = ["imgui-gfx-renderer/opengl"]
# FIXME
# directx = ["imgui-gfx-renderer/directx"]
default = ["opengl"]

[target.'cfg(windows)'.dev-dependencies]
gfx_device_dx11 = "0.8"
gfx_window_dxgi = "0.19"
