[package]
name = "rsbackup"
version = "0.2.0"
authors = ["Arc676/Alessandro Vinciguerra <alesvinciguerra@gmail.com>"]
edition = "2021"

[dependencies]
# rsbackup
structopt = "0.3.21"
chrono = "0.4"
# egui frontend
eframe = "0.16.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }

[[bin]]
name = "rsbackup"
path = "src/main.rs"

[[bin]]
name = "rsbackup-editor"
path = "editor/main.rs"

[features]
persistence = ["eframe/persistence", "serde"]
